updated the info and add lnks

--- a/WebApplication1/Views/Angular/Index.cshtml
+++ b/WebApplication1/Views/Angular/Index.cshtml
@@ -6,6 +6,11 @@
 <h2>
     Angular
 </h2>
+This page uses angularJS and Web-APi. the api results can be seen at 
+/api/#Controllers.
+you can also view the result from <a href="~/api/Catalogs"> for example</a>
+It uses both the Catalogs and the products.
+ I stopped with the update as I just wanted to show proof of concept.
 
 @section Scripts
 {
