--- a/WebApplication1/Views/Home/Index.cshtml
+++ b/WebApplication1/Views/Home/Index.cshtml
@@ -6,6 +6,10 @@
     ViewBag.Title = "Home Page";
 }
 
+This page uses basic MVC with Ninject and a repository pattern. 
+It is simply returning with each update. One interesting thing is the recurssion deletion method 
+in that it will/should recursively delete the products and categories beneath it. 
+
 <div class="row">
 
     <div class="col-xs-6">
